fix(dto): fix app usage type
